fix image height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5662,7 +5662,7 @@ a.animated-button.victoria-four:hover:after {
   justify-content: flex-start;
 }
 
-.category-list .group-lg-wrapper .cate-group .image {
+.category-list .group-lg-wrapper .cate-group .image img {
   align-self: center;
 }
 
